<resources>
    <string name="app_name">BayNBA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_live_score">Live Score</string>
    <string name="title_standings">Standings</string>
    <string name="title_teams">Teams</string>
    <string name="title_stats">Stats</string>
    <string name="title_profile">Profile</string>
</resources>