<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_standings"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_standings" />

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_teams" />

    <item
        android:id="@+id/navigation_live_score"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_live_score" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_stats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>